log
Fri, Apr 18, 2025  4:39:12 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:34: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     if(nuevoMapa == NULL) return EXIT_FAILURE;
                                  ^~~~~~~~~~~~
hashmap.c:61:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return EXIT_FAILURE;
                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  4:39:45 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:34: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     if(nuevoMapa == NULL) return EXIT_FAILURE;
                                  ^~~~~~~~~~~~
hashmap.c:61:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return EXIT_FAILURE;
                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
30727f6
Fri, Apr 18, 2025  4:39:55 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6b4a56c
Fri, Apr 18, 2025  4:55:57 PM: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|0
cd54aed
Fri, Apr 18, 2025  5:01:10 PM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|5
total_score: 20/70
e42e49d
